# pun

./: .envrc  .gitignore  DONTREADME.md  README.md  deps.edn  devenv.nix  devenv.yaml  download.sh  hie.yaml  prompt.txt  pyproject.toml  system.txt
.clj-kondo/: config.edn
.github/workflows/: test.yml
clj/: .gitignore  deps.edn
clj/src/: server.clj
hs/: .ghci  .gitignore  hs.cabal  package.yaml  stack.yaml
hs/app/: Main.hs
scripts/: download-pun.sh  download-wiktionary.sh
src/: build.clj  core.clj  server.clj
